--- a/.editorconfig
+++ b/.editorconfig
@@ -14,5 +14,9 @@ insert_final_newline = true
 indent_style = tab
 indent_size = 4
 
+[*.html]
+indent_style = tab
+indent_size = 4
+
 [*.md]
 trim_trailing_whitespace = false
