Removed unused bower dependencies

--- a/html/bower.json
+++ b/html/bower.json
@@ -1,8 +1,6 @@
 {
-  "name": "html",
+  "name": "gm-mediaplayer",
   "private": true,
-  "dependencies": {
-    "jquery": "~1.11.0"
-  },
+  "dependencies": {},
   "devDependencies": {}
 }
