--- a/html/package.json
+++ b/html/package.json
@@ -1,6 +1,10 @@
 {
   "name": "gm-mediaplayer",
   "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/pixeltailgames/gm-mediaplayer.git"
+  },
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -18,6 +22,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-rev": "~0.1.0",
     "grunt-autoprefixer": "~0.7.2",
+    "grunt-build-control": "^0.1.3",
     "grunt-usemin": "~2.1.0",
     "grunt-mocha": "~0.4.10",
     "grunt-newer": "~0.7.0",
