--- a/html/package.json
+++ b/html/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "repository": {
     "type": "git",
-    "url": "http://github.com/pixeltailgames/gm-mediaplayer.git"
+    "url": "https://github.com/pixeltailgames/gm-mediaplayer.git"
   },
   "dependencies": {},
   "devDependencies": {
